Project sistema_web_gls {
  database_type: "MySQL"
  Note: "Modelo relacional Sistema Web GLS — alineado con migrations/001_schema.sql"
}

Table roles {
  id int [pk, increment]
  codigo varchar(20) [unique, not null, note: "admin|operaciones|consulta"]
  etiqueta varchar(50) [not null]
  created_at datetime(3) [not null, default: `CURRENT_TIMESTAMP(3)`]
}

Table estados_envio {
  id int [pk, increment]
  nombre varchar(50) [unique, not null]
  es_activo tinyint(1) [not null, default: 0]
  created_at datetime(3) [not null, default: `CURRENT_TIMESTAMP(3)`]
}

Table usuarios {
  id varchar(50) [pk, not null]
  email varchar(255) [unique, not null]
  nombres varchar(255) [not null]
  rol_id int [not null, ref: > roles.id]
  activo tinyint(1) [not null, default: 1]
  password_hash varchar(255) [not null]
  created_at datetime(3) [not null]
  updated_at datetime(3) [not null]
}

Table clientes {
  id varchar(50) [pk, not null]
  nombres varchar(255) [not null]
  documento varchar(20) [unique, not null]
  telefono varchar(30) [not null]
  direccion text [not null]
  empresa varchar(255) [not null, default: '']
  created_at datetime(3) [not null]
  updated_at datetime(3) [not null]
}

Table secuencias_envio {
  anio smallint [pk, not null]
  contador int [not null, default: 0]
  updated_at datetime(3) [not null, default: `CURRENT_TIMESTAMP(3)`, note: "ON UPDATE CURRENT_TIMESTAMP(3)"]
}

Table envios {
  id bigint [pk, increment]
  codigo_envio varchar(20) [unique, not null]
  cliente_id varchar(50) [null, ref: > clientes.id, note: "ON DELETE SET NULL"]
  estado_actual_id int [not null, ref: > estados_envio.id]
  remitente_nombres varchar(255) [not null]
  remitente_documento varchar(20) [not null]
  remitente_telefono varchar(30) [not null]
  remitente_direccion text [not null]
  destinatario_nombres varchar(255) [not null]
  destinatario_documento varchar(20) [not null]
  destinatario_telefono varchar(30) [not null]
  destinatario_direccion text [not null]
  cliente_documento varchar(20) [null]
  cliente_nombres varchar(255) [null]
  cliente_telefono varchar(30) [null]
  cliente_direccion text [null]
  cliente_empresa varchar(255) [null]
  origen varchar(255) [not null]
  destino varchar(255) [not null]
  tipo_carga varchar(255) [not null]
  descripcion text [not null]
  peso decimal(10,2) [not null]
  dim_largo decimal(10,2) [not null]
  dim_ancho decimal(10,2) [not null]
  dim_alto decimal(10,2) [not null]
  dim_unidad varchar(20) [not null, default: 'cm']
  observacion text [not null]
  evidencia_referencia varchar(255) [null]
  evidencia_detalle text [null]
  evidencia_receptor_nombre varchar(255) [null]
  evidencia_receptor_documento varchar(20) [null]
  evidencia_fecha datetime(3) [null]
  evidencia_registrado_por varchar(255) [null]
  fecha_registro datetime(3) [not null]
  fecha_ultima_actualizacion datetime(3) [not null]
  created_at datetime(3) [not null, default: `CURRENT_TIMESTAMP(3)`]
  updated_at datetime(3) [not null, default: `CURRENT_TIMESTAMP(3)`, note: "ON UPDATE CURRENT_TIMESTAMP(3)"]
}

Table cotizaciones_envio {
  id bigint [pk, increment]
  envio_id bigint [unique, not null, ref: > envios.id, note: "ON DELETE CASCADE"]
  moneda varchar(10) [not null, default: 'PEN']
  distancia_km decimal(10,2) [not null, default: 0]
  tarifa_por_kg decimal(10,4) [not null]
  tarifa_por_m3 decimal(10,4) [not null]
  tarifa_por_km decimal(10,4) [not null]
  seguro_porcentaje decimal(5,2) [not null, default: 0]
  volumen_m3 decimal(12,4) [not null]
  peso_volumetrico_kg decimal(12,2) [not null]
  peso_cobrado_kg decimal(12,2) [not null]
  costo_por_peso decimal(12,2) [not null]
  costo_por_volumen decimal(12,2) [not null]
  costo_por_distancia decimal(12,2) [not null]
  subtotal decimal(12,2) [not null]
  seguro_monto decimal(12,2) [not null]
  total_estimado decimal(12,2) [not null]
  nota text [not null]
  created_at datetime(3) [not null, default: `CURRENT_TIMESTAMP(3)`]
}

Table historial_envios {
  id varchar(100) [pk, not null]
  envio_id bigint [not null, ref: > envios.id, note: "ON DELETE CASCADE"]
  estado_id int [not null, ref: > estados_envio.id]
  fecha_actualizacion datetime(3) [not null]
  observacion text [not null]
  responsable varchar(100) [not null, default: 'Área de operaciones']
  evidencia_referencia varchar(255) [not null, default: '']
  evidencia_detalle text [null]
  receptor_nombre varchar(255) [not null, default: '']
  receptor_documento varchar(20) [not null, default: '']
  registrado_por varchar(255) [not null]
  usuario_id varchar(50) [null, ref: > usuarios.id, note: "ON DELETE SET NULL"]
  created_at datetime(3) [not null, default: `CURRENT_TIMESTAMP(3)`]
}

Table ubicaciones_envio {
  id varchar(100) [pk, not null]
  envio_id bigint [not null, ref: > envios.id, note: "ON DELETE CASCADE"]
  direccion text [not null]
  latitud decimal(10,7) [not null]
  longitud decimal(10,7) [not null]
  observacion text [null]
  fecha_registro datetime(3) [not null]
  responsable varchar(100) [not null, default: 'Área de operaciones']
  registrado_por varchar(255) [not null]
  usuario_id varchar(50) [null, ref: > usuarios.id, note: "ON DELETE SET NULL"]
  created_at datetime(3) [not null, default: `CURRENT_TIMESTAMP(3)`]
}

Table auditoria {
  id varchar(100) [pk, not null]
  usuario_id varchar(50) [null, ref: > usuarios.id, note: "ON DELETE SET NULL"]
  usuario_email varchar(255) [not null, default: '']
  rol varchar(50) [not null, default: '', note: "Código interno: admin|operaciones|consulta"]
  accion varchar(50) [not null]
  modulo varchar(100) [not null]
  descripcion text [not null]
  ip varchar(45) [null]
  user_agent text [null]
  fecha datetime(3) [not null]
  created_at datetime(3) [not null, default: `CURRENT_TIMESTAMP(3)`]
}
